# Detec_facial

./: .gitignore  README.md  analysis_report.json  analysis_report.txt  audio_analysis.py  main_analysis.py  pyproject.toml  requirements.txt  simple_video_analysis.py  tech-challenger.md  video_analysis.py
src/: main_analysis.py  video_analysis.py
